handle user language from api request
