# handler/docs/swagger.json
@@ -1111,6 +1111,10 @@
                     "type": "string",
                     "format": "uuid"
                 },
+                "language": {
+                    "description": "Preferred language",
+                    "type": "string"
+                },
                 "name": {
                     "description": "user name",
                     "type": "string"
